/cdc_hospitalizations/create.sql
/cdc_hospitalizations/increase_race_category_length.sql
/state_trend_data/create.sql
/state_trend_data/fix_tests_7_day_mean_column.sql
/state_trend_data/add_column_hotspot.sql
/state_trend_data/add_column_state.sql
/police_shooting_data/create.sql
/police_shooting_data/increase_name_column_length.sql
/police_shooting_data/increase_armed_column_length.sql
/weekly_evictions/create.sql
/weekly_evictions/add_column_geo_id.sql
/weekly_evictions/add_column_county.sql
/county_location_data/create.sql
/county_location_data/modify_column_geo_id_to_varchar.sql