@@ -12,3 +12,5 @@
 /weekly_evictions/add_column_county.sql
 /county_location_data/create.sql
 /county_location_data/modify_column_geo_id_to_varchar.sql
+/conuty_location_data/remove_longitude_latitude_columns.sql
+/county_coordinates_data/create.sql
